--- a/_includes/episode-module.html
+++ b/_includes/episode-module.html
@@ -1,16 +1,15 @@
-{% assign image_path = episode.number | prepend: "/assets/images/episodes/" | append: "/artwork.jpg" %}
-{% assign image_path_high_res = episode.number | prepend: "/assets/images/episodes/" | append: "/artwork@2x.jpg" %}
+{% assign episode = include.episode %}
+{% assign image_path = episode.number | prepend: "/assets/images/episodes/" | append: "/artwork.png" %}
+{% assign image_path_high_res = episode.number | prepend: "/assets/images/episodes/" | append: "/artwork@2x.png" %}
 
 <article class="episode" id="episode-{{ episode.number }}">
     <img src="{{ image_path | relative_url }}" srcset="{{ image_path_high_res | relative_url }} 2x" class="episode-image" alt="">
 
-    <h2 class="episode-title">
-        <a class="episode-link" href="{{ episode.url | relative_url }}">{{ episode.title | escape }}</a>
-    </h2>
+    <a href="{{ episode.url | relative_url }}" class="episode-link">
+        <strong class="episode-number">Episode {{ episode.number }}</strong>
 
-    <p>
-        {{ episode.description | markdownify }}
-    </p>
+        <h2 class="episode-title">{{ episode.title | escape }}</h2>
+    </a>
 
     <ul class="episode-links">
         <li><a href="#subscribe-links" class="episode-subscribe-link" data-subscribe-links="episode-{{ episode.number }}-subscribe-links">Subscribe</a></li>
@@ -18,12 +17,12 @@
         <li><a href="" class="episode-share-link" data-share-links="episode-{{ episode.number }}-share-links">Share</a></li>
     </ul>
 
-    <iframe src="{{ episode.embed }}?style=dark" seamless="" scrolling="no" width="100%" height="36px" frameborder="0"></iframe>
+    <iframe class="episode-player" src="{{ episode.embed }}?style=light" seamless="" scrolling="no" width="100%" height="36px" frameborder="0"></iframe>
 
     <!-- the following are presented in modal windows -->
     <div class="modal-content-wrapper">
         <div class="episode-subscribe-links" id="episode-{{ episode.number }}-subscribe-links">
-            {% include subscribe-links.html %}
+            {% include subscribe-links.html episode_title=episode.title %}
         </div>
     </div>
 
@@ -32,7 +31,7 @@
             <h4>Episode {{ episode.number }} - {{ episode.title | escape }}</h4>
             {% assign episode_share_url = episode.url | absolute_url %}
             {% assign episode_share_text = episode.number | prepend: "IRL Podcast - Episode " | append: ": " | append: episode.title  %}
-            {% include social-share-links.html share_url=episode_share_url share_text=episode_share_text %}
+            {% include social-share-links.html share_url=episode_share_url share_text=episode_share_text episode_title=episode.title %}
         </div>
     </div>
 
