Add Apple podcast ID to smart banner.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,7 +9,7 @@
     <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
     <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
 
-    <meta name="apple-itunes-app" content="app-id=PODCAST_ID_HERE">
+    <meta name="apple-itunes-app" content="app-id=1247652431">
 
     <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
