--- a/_includes/subscribe-links.html
+++ b/_includes/subscribe-links.html
@@ -1,14 +1,14 @@
 <ul class="subscribe-links" data-episode-title="{{ include.episode_title | default: "" }}">
     <li>
-        <a href="" data-service="iTunes"><img src="{{ "/assets/images/apple-podcasts-badge.svg" | relative_url }}" alt="Subscribe on Apple Podcasts"></a>
+        <a href="https://geo.itunes.apple.com/podcast/us/is1247652431?mt=2&at=1010lbVy&ct=mozilla_{{ include.itunes_tracking }}" rel="external" data-service="iTunes"><img src="{{ "/assets/images/apple-podcasts-badge.svg" | relative_url }}" alt="Subscribe on Apple Podcasts"></a>
     </li>
     <li>
-        <a href="" data-service="Spotify"><img src="{{ "/assets/images/spotify-badge.svg" | relative_url }}" alt="Subscribe on Spotify"></a>
+        <a href="" rel="external" data-service="Spotify"><img src="{{ "/assets/images/spotify-badge.svg" | relative_url }}" alt="Subscribe on Spotify"></a>
     </li>
     <li>
-        <a href="" data-service="Radio Public"><img src="{{ "/assets/images/radiopublic-badge.svg" | relative_url }}" alt="Subscribe on RadioPublic"></a>
+        <a href="https://play.radiopublic.com/irl-online-life-is-real-life-6Bv5Op" rel="external" data-service="Radio Public"><img src="{{ "/assets/images/radiopublic-badge.svg" | relative_url }}" alt="Subscribe on RadioPublic"></a>
     </li>
     <li class="rss-link">
-        <a href="http://feeds.mozilla-podcasts.org/irl" data-service="RSS">Or, subscribe using RSS</a>
+        <a href="https://feeds.mozilla-podcasts.org/irl" data-service="RSS">Or, subscribe using RSS</a>
     </li>
 </ul>
