--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+id:     home
 ---
 
 <section id="intro">
@@ -17,12 +18,8 @@ layout: default
             real talk about the future of the Web. IRL is an original podcast
             from Mozilla. Because online life is real life.
         </p>
-    </div>
-</section>
 
-<section id="subscribe">
-    <div class="content">
-        {% include subscribe-links.html %}
+        {% include subscribe-links.html itunes_tracking="homepage" %}
     </div>
 </section>
 
