--- a/_sass/components/_modal.scss
+++ b/_sass/components/_modal.scss
@@ -44,19 +44,17 @@ html.noscroll {
             max-width: 600px;
             position: relative;
             background: #fff;
-            padding: 20px;
+            padding: 40px;
             @include clearfix;
 
             & > header {
                 @include font-size-level2;
-                color: #fff;
                 display: block;
+                font-weight: bold;
                 height: auto;
                 line-height: 1.3;
                 min-height: 46px;
-                padding: 6px 60px 0 20px;
-                background: #000;
-                margin: -20px -20px 20px;
+                padding-right: 60px;
             }
 
             #modal-close {
@@ -72,11 +70,10 @@ html.noscroll {
                 }
 
                 .button {
-                    @include image-replaced;
+                    @include image-replaced();
                     background: transparent url($baseurl + '/assets/images/modal-close.svg') center center no-repeat;
                     @include background-size(14px 14px);
-                    border-radius: 50%;
-                    border: 1px solid #fff;
+                    border: none;
                     height: 30px;
                     min-width: 0;
                     padding: 0;
@@ -93,10 +90,13 @@ html.noscroll {
             .overlay-contents {
                 background: transparent;
                 margin: 0 auto;
-                padding-top: 20px;
 
                 img, iframe {
                     max-width: 100%;
+                }
+
+                ul {
+                    margin-bottom: 0;
                 }
             }
         }
